# entra-least-privilege-analyzer

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ENTERPRISE_FEATURES.md  GETTING_STARTED.md  PRIVACY.md  README.de.md  README.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/elpa-cli/: Cargo.toml
crates/elpa-cli/src/: main.rs
crates/elpa-cli/tests/: demo.rs
crates/elpa-core/: Cargo.toml
crates/elpa-core/src/: analyzer.rs  lib.rs  models.rs  report.rs
crates/elpa-graph/: Cargo.toml
crates/elpa-graph/src/: client.rs  lib.rs  pim.rs  roles.rs  users.rs
docs/: architecture.md  graph_api_setup.md
examples/: analyze_tenant.rs  export_report.rs
reports/: sample_report.json  sample_report.md
scripts/: export_report.sh  setup.sh
