[workspace]
members = [
    "crates/elpa-core",
    "crates/elpa-graph",
    "crates/elpa-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2021"
authors = ["RayStudio"]
license = "MIT"
repository = "https://github.com/9t29zhmwdh-coder/entra-least-privilege-analyzer"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tabled = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
