[package]
name = "elpa-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "elpa"
path = "src/main.rs"

[dependencies]
elpa-core = { path = "../elpa-core" }
elpa-graph = { path = "../elpa-graph" }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tabled = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
